This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

28-Aug-2002 (Lars Duening)  (3.3.235)
   - (mud/lp-245) Provided all object lfuns with proper argument and return
        types.

27-Aug-2002 (Lars Duening)  (3.3.234)
   - (prolang.y) Fixed two typos in messages.

26-Aug-2002 (Lars Duening)
   - (swap.c) The OSTAT diagnostic for swap-in subtracted instead of added
        to compute the expected new tot_alloc_object_size value (reported
        by Coogan).

25-Aug-2002 (Lars Duening)
   - (comm.c) The pthreads code didn't compile (reported by Markus).

24-Aug-2002 (Lars Duening)  (3.3.233)
   - (efuns.c) Efun terminal_colour(): some random characters were appended
        to the result string (reported by Markus).
   - (object.c) If restoring from a file fails, the error message lists
        the line number concerned.

23-Aug-2002 (Lars Duening)  (3.3.232)
   - (efuns.c) Efun terminal_colour(): the bugfix to handle single '%'
        was incomplete (reported by Markus).

21-Aug-2002 (Lars Duening)  (3.3.231)
   - (comm.c, object.c, simulate.c, swap.c) Corrected some warnings
        (reported by Dafire).
   - (interpret, and some more files) Master applies caused by external events
        (like ERQ messages) are now distinguished from internal calls
        (like valid_write()) so that the error handling for external calls
        receive the full eval cost benefits (suggested by Fiona).
   - (Makefile.in s): Added missing @EXEEXT@ tags.

20-Aug-2002 (Lars Duening)  (3.3.230)
   - (main.c) Needed to #include <netdb.h> on Solaris to get the
        MAXHOSTNAMELEN macro (thanks, Coogan).
   - (util/erq/erq.c, util/xerq/erq.c) Forgot the timestamp in the
        initial startup message.
   - (port, files.c, comm.c, hosts/unix.h) Cygwin corrections.
   - (config.h, configure, driver.h, erqs) New configuration option