@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 235)
-(Parent-Version lpmud 3-3 234)
-(Version-Log "Provided the object functions in lp-245 lib with proper argument and return types.")
+(Project-Version lpmud 3-3 236)
+(Parent-Version lpmud 3-3 235)
+(Version-Log "Corrected a problem in the code generation.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 28 Aug 2002 16:08:03 -0600")
+(Checkin-Time "Thu, 29 Aug 2002 00:57:15 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,7 +61,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.7 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.44 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.298 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.299 644))
   (HISTORY (lpmud/f/49_HISTORY 1.266 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.16 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -214,7 +214,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.12 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.14 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.27 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.28 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
